# SoftRender

./: CMakeLists.txt  README.md  main.cpp
include/: engine.h  preheader.h  timer.h  typedef.h
src/: engine.cpp  preheader.h  stb_image_impl.cpp  typedef.cpp  typedef.h
